Add Settings to client and view options

--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -101,6 +101,7 @@ body {
 
 #controls-inner-container .bet-input-group>input, #controls-inner-container .bet-input-group>span {
     background-color: rgb(240, 238, 238);
+    /* color: #b0b3c1; */
 }
 
 
@@ -121,8 +122,34 @@ body {
 }
 
 
+/*/!* ==========================================================================*/
+   /*tabs.css*/
+   /*========================================================================== *!/*/
+
+/*#tabs-inner-container .widget-container {*/
+    /*background-color: #181a1e;*/
+/*}*/
+
+/*#tabs-inner-container, #tabs-inner-container .log-chat-container {*/
+    /*border-color: #292d35;*/
+    /*/!*color: black;*!/*/
+/*}*/
+
+/*#tabs-inner-container .tab-container li.chat-log-tab.tab-active {*/
+    /*background-color: #181a1e;*/
+/*}*/
+
+/*#tabs-inner-container .tab-container li.chat-log-tab {*/
+    /*background-color: #292d35;*/
+/*}*/
+
+/*#tabs-inner-container .tab-container li.chat-log-tab a {*/
+    /*color: #b0b3c1;*/
+/*}*/
+
+
 /* ==========================================================================
-   tabs.css
+   tabsSelector.css
    ========================================================================== */
 
 #tabs-inner-container .widget-container {
@@ -131,19 +158,67 @@ body {
 
 #tabs-inner-container, #tabs-inner-container .log-chat-container {
     border-color: #292d35;
-    /*color: black;*/
 }
 
-#tabs-inner-container .tab-container li.chat-log-tab.tab-active {
-    background-color: #181a1e;
-}
-
-#tabs-inner-container .tab-container li.chat-log-tab {
+#tabs-inner-container .tab-container li.tab.col-3, #tabs-inner-container .tab-container li.tab.col-4 {
     background-color: #292d35;
 }
 
-#tabs-inner-container .tab-container li.chat-log-tab a {
+#tabs-inner-container .tab-container li.tab.tab-active {
+    background-color: #181a1e;
+}
+
+#tabs-inner-container .tab-container li.tab a {
     color: #b0b3c1;
+}
+
+#tabs-inner-container .tab-container .tab-settings {
+    background-color: #292d35;
+}
+
+#tabs-inner-container .tab-container .tab-settings.tab-active {
+    background-color: #181a1e;
+}
+
+
+/* ==========================================================================
+   settingsSelector.css
+   ========================================================================== */
+
+#settings-selector-container .tab-holder {
+    background-color: #292d35;
+}
+
+#settings-selector-container .tab-holder.tab-active {
+    background-color: #181a1e;
+}
+
+#settings-selector-container .tab-holder a {
+    color: #b0b3c1;
+}
+
+
+/* ==========================================================================
+   hotkeysSettings.css
+   ========================================================================== */
+
+#hotkeys-settings-container .hotkeys-list span:nth-of-type(odd) {
+    background-color: #202328;
+}
+
+
+/* ==========================================================================
+   displaySettings.css
+   ========================================================================== */
+
+#display-settings-container .option-row:nth-of-type(even) {
+    background-color: #202328;
+}
+
+#display-settings-container select {
+    background-color: #292d35;
+    border-color: #292d35;
+    color: white;
 }
 
 
@@ -167,6 +242,10 @@ body {
 
 #strategy-container .auto-bet-container input[type="text"] {
     color: white;
+}
+
+#strategy-container .auto-bet-container>div:nth-of-type(even) {
+    background-color: #202328;
 }
 
 
