--- a/client_new/css/chart.css
+++ b/client_new/css/chart.css
@@ -33,8 +33,21 @@
 
 #chart-inner-container .max-profit {
     position: absolute;
-    bottom: 27px;
-    right: 30px;
-    font-size: 0.6rem;
-    color: black;
+    /* bottom: 0; */
+    top: 0;
+    /* right: 10%; */
+    left: 10%;
+    font-size: 0.5rem;
+    color: rgb(76, 75, 75);
+}
+
+#chart-inner-container canvas.hide {
+    display: none;
+}
+
+/** Small screen and small controls **/
+@media handheld, only screen and (max-width: 767px) {
+    #chart-inner-container.small .max-profit {
+
+    }
 }
