--- a/client_new/css/controls.css
+++ b/client_new/css/controls.css
@@ -1,57 +1,49 @@
+/** ================ Default look ================ **/
+
+
 #controls-inner-container {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    display: table;
 }
 
 #controls-inner-container .control-inputs-container {
-    padding: 0.8rem;
-    min-width: inherit;
 }
 
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .control-inputs-container {
-        width: 70%;
-        padding: 0 0.8rem;
-        float: left;
-    }
+#controls-inner-container .controls-row {
+    display: table-row;
+    width: 100%;
+}
+
+#controls-inner-container .controls-col {
+    display: table-cell;
+    width: 100%;
+}
+
+#controls-inner-container .input-control {
+    height: 0;
+    width: 100%;
 }
 
 #controls-inner-container .button-container {
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .button-container {
-        float: left;
-        width: 30%;
-    }
+    height: 100%;
 }
 
 #controls-inner-container .bet-container, #controls-inner-container  .autocash-container {
 }
 
 #controls-inner-container .bet-container {
-    padding-top: 1rem;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-container {
-        padding-top: 0;
-        margin-top: 0;
-    }
+    padding: 1rem 0.5rem 0 0.5rem;
 }
 
 #controls-inner-container .autocash-container {
-    padding-top: 2rem;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .autocash-container {
-        padding-top: 0;
-        margin-top: 0.3rem;
-    }
+    padding: 2rem 0.5rem 0 0.5rem;
 }
 
 #controls-inner-container  .bet-container > input, #controls-inner-container  .bet-container > span, #controls-inner-container .autocash-container > input, #controls-inner-container .autocash-container > span {
 }
+
 
 /** BET/AUTOCASH **/
 
@@ -65,11 +57,7 @@
     width: 100%;
     outline: none;
     padding-left: 0.5rem;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-input-group>input {
-
-    }
+    margin: 0;
 }
 
 #controls-inner-container .bet-input-group>input, #controls-inner-container .bet-input-group>span {
@@ -77,41 +65,15 @@
     border: 1px solid #ccc;
     color: #181a1e;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-input-group>input, #controls-inner-container .bet-input-group>span {
-        font-size: 0.8rem;
-    }
-}
 
 #controls-inner-container .bet-input-group>span:first-child  {
     position: absolute;
     font-weight: bold;
-    top: -1rem;
+    top: -1.5rem;
     border: 0;
     background-color: transparent;
     border-color: transparent;
-}
-
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-input-group>span:first-child  {
-        color: #555;
-        text-align: center;
-        background-color: #eee;
-        border: 1px solid #ccc;
-        border-radius: 2px;
-        font-size: 0.8em;
-        padding: 0 0.1rem;
-        border-right: 0;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-        width: 1%;
-        white-space: nowrap;
-        vertical-align: middle;
-        height: 0.8rem;
-        display: table-cell;
-        position: static;
-        top: initial;
-    }
+    color: #b0b3c1;
 }
 
 #controls-inner-container .bet-input-group>span:last-child  {
@@ -160,26 +122,15 @@
     border: none;
     background-color: transparent;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-input-group.error>span:first-child {
-    background-color: #a94442;
-    color: white;
-    }
-}
 
 
 /** Button **/
 
 #controls-inner-container .bet-button-container {
     height: 100%;
-    /* background-color: #f5f5f5; */
-    padding: 0.8rem;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button-container {
-        padding: 0 0.1rem;
-        height: 100%;
-    }
+    box-sizing: content-box;
+    padding-top: 0.8rem;
+    padding: 0.8rem 0.5rem 0.1rem 0.5rem;
 }
 
 #controls-inner-container .bet-button {
@@ -187,8 +138,9 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 6rem;
-    top: calc(100% - 3em);
+    /* height: 6rem; */
+    height: calc(100% - 10px);
+    /* top: calc(100% - 3em); */
     text-align: center;
     color: white;
     background-color: rgba(243,150,47,1);
@@ -208,13 +160,6 @@
     font-family: inherit;
     cursor: pointer;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button {
-        top: inherit;
-        height: 1.7rem;
-        font-size: 1.2rem;
-}
-}
 
 #controls-inner-container .bet-button > span {
      white-space: nowrap;
@@ -222,30 +167,16 @@
 
 #controls-inner-container .btn-content {
     white-space: nowrap;
-    /* height: 3rem; */
 }
 
 #controls-inner-container .btn-content .cashout-cont {
     display: block;
     line-height: 2rem;
-    /* padding-top: 0rem; */
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .btn-content .cashout-cont {
-        display: inline;
-        line-height: inherit;
-        padding-top: 0;
-    }
 }
 
 #controls-inner-container .btn-content .cashout-amount-cont {
     display: block;
     font-size: 1.5rem;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .btn-content .cashout-amount-cont{
-        display: none;
-    }
 }
 
 #controls-inner-container .bet-button:active {
@@ -259,15 +190,6 @@
 #controls-inner-container .bet-button.cashout {
     background-color: #ff8100;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button.cashout {
-        font-size: 1rem;
-    }
-}
-
-/*#controls-inner-container .bet-button.invalid-bet {*/
-    /*background-color: rgba(168, 168, 168, 1);*/
-/*}*/
 
 #controls-inner-container .bet-button.disable, #controls-inner-container .bet-button.invalid-bet {
     background-color: rgba(168, 168, 168, 1);
@@ -276,54 +198,230 @@
     box-shadow: 0px 3px 0px rgb(102, 102, 102), 0px 3px 6px rgba(0,0,0,0.2);
     cursor: default;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button.disable, #controls-inner-container .bet-button.invalid-bet {
-        font-size: 1rem;
-    }
-}
 
 #controls-inner-container .bet-button.disable.cancel {
     cursor: pointer;
-}
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button.disable.cancel {
-
-    }
 }
 
 #controls-inner-container .bet-button a.cancel {
     color: #880000;
     font-size: 0.8rem;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .bet-button a.cancel {
 
-    }
-}
 
 /* Login Button */
 
 #controls-inner-container .login-container {
-
 }
 
 #controls-inner-container .login-button-container {
     margin: 0.8rem;
     margin-top: 2rem;
 }
-@media handheld, only screen and (max-width: 767px) {
-    #controls-inner-container .login-button-container {
-    margin: 0.4rem 0 0 0.5rem;
-        
-    }
-}
 
 #controls-inner-container .register-container {
     text-align: right;
-
     padding-right: 0.8rem;
 }
 
 #controls-inner-container .register-container .register{
+}
 
+
+/** ================ Small Screen look ================ **/
+
+@media handheld, only screen and (max-width: 767px) {
+
+    #controls-inner-container .control-inputs-container {
+        width: 70%;
+        padding: 0;
+        float: left;
+        display: block;
+    }
+
+    #controls-inner-container .input-control {
+        height: initial;
+    }
+
+    #controls-inner-container .button-container {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    #controls-inner-container .bet-container {
+        padding-top: 0;
+        margin-top: 0;
+    }
+
+    #controls-inner-container .autocash-container {
+        padding-top: 0;
+        margin-top: 0.3rem;
+    }
+
+    /** BET/AUTOCASH **/
+
+    #controls-inner-container .bet-input-group>input, #controls-inner-container .bet-input-group>span {
+        font-size: 0.8rem;
+    }
+
+    #controls-inner-container .bet-input-group>span:first-child {
+        color: #555;
+        text-align: center;
+        background-color: #eee;
+        border: 1px solid #ccc;
+        border-radius: 2px;
+        font-size: 0.8em;
+        padding: 0 0.2rem;
+        border-right: 0;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        width: 1%;
+        white-space: nowrap;
+        vertical-align: middle;
+        height: 0.8rem;
+        display: table-cell;
+        position: static;
+        top: initial;
+    }
+
+    #controls-inner-container .bet-input-group.error>span:first-child {
+        background-color: #a94442;
+        color: white;
+    }
+
+    /** Button **/
+
+    #controls-inner-container .bet-button-container {
+        padding: 0 0.1rem;
+        height: 100%;
+    }
+
+    #controls-inner-container .bet-button {
+        top: inherit;
+        font-size: 1.2rem;
+        /* height: calc(100% - 10px); */
+}
+
+    #controls-inner-container .btn-content .cashout-cont {
+        display: inline;
+        line-height: inherit;
+        padding-top: 0;
+    }
+
+    #controls-inner-container .btn-content .cashout-amount-cont {
+        display: none;
+    }
+
+    #controls-inner-container .bet-button.cashout {
+        font-size: 1rem;
+    }
+
+    #controls-inner-container .bet-button.disable, #controls-inner-container .bet-button.invalid-bet {
+        font-size: 1rem;
+    }
+
+    /* Login Button */
+
+    #controls-inner-container .login-button-container {
+        margin: 0.4rem 0 0 0.5rem;
+    }
+}
+
+/** ================ Big screen and small controls look ================ **/
+
+@media screen and (min-width: 767px) {
+
+    #controls-inner-container.small {
+        display: block;
+    }
+
+    #controls-inner-container.small .control-inputs-container {
+        width: 70%;
+        float: left;
+        padding: 0;
+    }
+
+    #controls-inner-container.small .input-control {
+        height: initial;
+    }
+
+    #controls-inner-container.small .button-container {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    #controls-inner-container.small .bet-container {
+        padding: 0.5rem 0.1rem 0 0.3rem;
+    }
+
+    #controls-inner-container.small .autocash-container {
+        padding: 1rem 0.1rem 0 0.3rem;
+    }
+
+    /** BET/AUTOCASH **/
+
+    #controls-inner-container.small .bet-input-group>input, #controls-inner-container .bet-input-group>span {
+        font-size: 0.8rem;
+        line-height: 2rem;
+    }
+
+    #controls-inner-container.small .bet-input-group>span:first-child {
+        color: #555;
+        text-align: center;
+        background-color: #eee;
+        border: 1px solid #ccc;
+        border-radius: 2px;
+        font-size: 0.8em;
+        padding: 0 0.3rem;
+        border-right: 0;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        width: 1%;
+        white-space: nowrap;
+        vertical-align: middle;
+        display: table-cell;
+        position: static;
+        top: initial;
+        height: 2rem;
+    }
+
+    #controls-inner-container.small .bet-input-group.error>span:first-child {
+        background-color: #a94442;
+        color: white;
+    }
+
+    /** Button **/
+
+    #controls-inner-container.small .bet-button-container {
+        padding: 0;
+    }
+
+    #controls-inner-container.small .bet-button {
+        font-size: 1.2rem;
+        margin: 0.5rem 0.5rem 0 0.5rem;
+        height: calc(100% - 10px - 0.6rem);
+        width: calc(100% - 1rem);
+    }
+
+    #controls-inner-container.small .btn-content .cashout-cont {
+        display: inline;
+        line-height: inherit;
+        padding-top: 0;
+    }
+
+    #controls-inner-container.small .btn-content .cashout-amount-cont {
+        display: none;
+    }
+
+    #controls-inner-container.small .bet-button.cashout {
+        font-size: 1rem;
+    }
+
+    /* Login Button */
+
+    #controls-inner-container.small .login-button-container {
+        margin: 0.4rem 0 0 0.5rem;
+    }
 }
