--- a/client_new/css/controlsSelector.css
+++ b/client_new/css/controlsSelector.css
@@ -10,13 +10,16 @@
     width: 100%;
     display: table;
 }
-
+/* Hide controls selector on small screen */
 @media handheld, only screen and (max-width: 767px) {
     #controls-selector-container .buttons-container {
         display: none;
     }
 }
-
+/* Hide controls selector when small controls */
+#controls-selector-container .buttons-container.small {
+    display: none;
+}
 
 #controls-selector-container .button-holder {
     display: table-cell;
@@ -60,6 +63,8 @@
 @media handheld, only screen and (max-width: 767px) {
     #controls-selector-container .controls-widget-container {
         top: 0;
-    
+    }
 }
+#controls-selector-container .controls-widget-container.small {
+    top: 0;
 }
