Revert engine change of names and add blacktheme color to the custom widget

--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -248,6 +248,11 @@ body {
     background-color: #202328;
 }
 
+#strategy-container .strategy-input {
+    background-color: transparent;
+    color: white;
+}
+
 
 /* ==========================================================================
    players.css
