--- a/client_new/css/general.css
+++ b/client_new/css/general.css
@@ -10,7 +10,7 @@ html, body {
     line-height: 20px;
     height: 100%;
     width: 100%;
-    font-size: 20px;
+    /* font-size: 20px; */
 }
 
 body {
