Add button TOP back to leaderboard

--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -43,7 +43,8 @@
 
         </tbody>
     </table>
-    {{?it.leaders.length > 20 }}<div class="border-button red right" onclick="#top"></div>{{?}}
+
+    {{?it.leaders.length > 20 }} <a class="border-button red right" href="#top">Top</a>{{?}}
 </div>
 #}}
 
