Fix typo in the strategy guide closes #196

--- a/views/guide.html
+++ b/views/guide.html
@@ -35,7 +35,7 @@
     <h4>Single Player Game</h4>
     <p>
         If you're playing a game, and no one else joins, it's not possible to overcome the <b>house odds</b>, and it becomes
-        a simple a simple game of luck.
+        a simple game of luck.
     </p>
 
     <h4>Simple Greedy Strategy</h4>
