Turn bitcoin adress in a bitcoin link

--- a/views/account.html
+++ b/views/account.html
@@ -43,7 +43,8 @@
             <hr>
             <p class="account">
                 <b>Deposit Address:</b>
-                <span>{{=it.user.deposit_address}}</span>
+                <a href="bitcoin:{{=it.user.deposit_address}}?message=deposit">{{=it.user.deposit_address}}</a>
+
             </p>
             <div class="row">
                 <div class="large-5 columns">
