--- a/views/template/header_new.html
+++ b/views/template/header_new.html
@@ -35,6 +35,15 @@
             </ul>
         </div>
 
+<!--         <div class="menu-mobile">
+        	<ul class="nav-list">
+                <li class="nav-item"><a href="/request"><i class="fa fa-gift"></i></a></li>
+                <li class="nav-item"><a href="/leaderboard"><i class="fa fa-users"></i></a></li>
+                <li class="nav-item"><a href="/stats"><i class="fa fa-area-chart"></i></a></li>
+                <li class="nav-item"><a href="/faq"><i class="fa fa-info"></i></a></li>
+            </ul>
+        </div> -->
+
         {{?it.table}}
         <div class="new-theme">
             <a href="/play-new" class="noselect">Try our BETA!</a>
