--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -42,8 +42,8 @@
         <div class="small-10 columns sets-content">
             <h4>Request A Withdrawal</h4>
             <p class="small">
-                **The minimum amount for a withdrawal is 200 bits. You will receive 100 bits less than what you withdraw,
-                as we use that 100 bits to go towards mining fee. As required, we will as well chip in with our money to
+                **The minimum amount for a withdrawal is {{= it.miningFee + 100 }} bits. You will receive {{= it.miningFee }} bits less than what you withdraw,
+                as we use that {{= it.miningFee }} bits to go towards mining fee. As required, we will as well chip in with our money to
                 help expedite confirmation time.
             </p>
 
@@ -53,7 +53,7 @@
             </p>
             <form action="/withdraw-request" method="post">
                 <label for="amount">Bits amount</label>
-                <input type="number" id="amount" name="amount" placeholder="200" min="200" step=".01" required/>
+                <input type="number" id="amount" name="amount" placeholder="{{= it.miningFee + 100 }}" min="{{= it.miningFee + 100 }}" step=".01" required/>
                 <label for="destination">Destination Address</label>
                 <input type="text" id="destination" name="destination" required/>
                 <label for="password">Your password</label>
