Switch from blocktrail to blockchain.info

--- a/views/deposit.html
+++ b/views/deposit.html
@@ -57,7 +57,7 @@
                             {{~it.user.deposits :deposit:index}}
                                 <tr>
                                     <td>{{#def.format: {n: deposit.amount, decimals: 2 } }}</td>
-                                    <td><a href="https://www.blocktrail.com/tx/{{=deposit.txid}}" target="_blank">link</a></td>
+                                    <td><a href="https://blockchain.info/tx/{{=deposit.txid}}" target="_blank">link</a></td>
                                     <td class="show-for-medium-up">{{=deposit.created}}</td>
                                 </tr>
                             {{~}}
