--- a/views/withdraw.html
+++ b/views/withdraw.html
@@ -64,7 +64,7 @@
                                 </td>
                                 <td>
                                     {{?withdrawal.status}}
-                                         <a href="https://www.blocktrail.com/tx/{{=withdrawal.status}}" target="_blank">Transfered</a>
+                                         <a href="https://blockchain.info/tx/{{=withdrawal.status}}" target="_blank">Transferred</a>
                                     {{??}}
                                         in progress
                                     {{?}}
