--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -124,31 +124,9 @@ body {
     opacity: 0.6;
 }
 
-
-/*/!* ==========================================================================*/
-   /*tabs.css*/
-   /*========================================================================== *!/*/
-
-/*#tabs-inner-container .widget-container {*/
-    /*background-color: #181a1e;*/
-/*}*/
-
-/*#tabs-inner-container, #tabs-inner-container .log-chat-container {*/
-    /*border-color: #292d35;*/
-    /*/!*color: black;*!/*/
-/*}*/
-
-/*#tabs-inner-container .tab-container li.chat-log-tab.tab-active {*/
-    /*background-color: #181a1e;*/
-/*}*/
-
-/*#tabs-inner-container .tab-container li.chat-log-tab {*/
-    /*background-color: #292d35;*/
-/*}*/
-
-/*#tabs-inner-container .tab-container li.chat-log-tab a {*/
-    /*color: #b0b3c1;*/
-/*}*/
+.messages-container .loading-container, .messages-container .spinner-pre-loader {
+    background-image: url('../img/loading-black.gif');
+}
 
 
 /* ==========================================================================
