--- a/views/register.html
+++ b/views/register.html
@@ -24,22 +24,26 @@
 </script>
         <div class="register">
             <form action="/register" method="post">
-                <div class="row">
-                    <div class="large-7 columns input">
+                <div class="content row panel radius">
+                    <div class="large-7 columns">
                         <h5>Create a new account <small><a href="login">already have one?</a></small></h5>
                         <hr>
+                    </div>
+
+                    <div class="large-7 columns input">
+
                         <div class="row">
                             <div class="large-3 columns">
-                                <label>Username</label>
+                                <label for="username">Username</label>
                             </div>
                             <div class="large-9 columns">
-                                <input type="text" name="user[name]" value="{{?it.values}}{{!it.values.name}}{{?}}" autocomplete="off" pattern="[A-Za-z0-9_\-]{3,16}" title="Username only allowed alphanumeric, hyphen and underscore" required />
+                                <input id="username" type="text" name="user[name]" value="{{?it.values}}{{!it.values.name}}{{?}}" autocomplete="off" pattern="[A-Za-z0-9_\-]{3,16}" title="Username only allowed alphanumeric, hyphen and underscore" required />
                             </div>
                         </div>
                     </div>
                     <div class="large-7 columns input">
-                        <div class="row">
 
+                        <div class="row">
                             <div class="large-3 columns">
                                 <label for="email">*Recovery Email</label>
                             </div>
@@ -48,7 +52,6 @@
                                 <small><b>* Optional</b> although we <b>strongly advise you to use one</b>, otherwise it is <b>not possible</b> to password reset!</small>
                             </div>
                         </div>
-
                     </div>
                     <div class="large-7 columns input">
                         <div class="row">
