--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,9 @@
 {{##def.content:
 <script src='https://www.google.com/recaptcha/api.js'></script>
 <script>
+	var submitEnabled = false;
   function enableSubmit() {
+	  submitEnabled = true;
     var s = document.getElementById('loginSubmit');
     s.style.display = 'block';
   }
@@ -11,7 +13,7 @@
 
 
 <div class="login">
-    <form action="/login" method="post">
+    <form action="/login" method="post" onsubmit="return submitEnabled;">
         <div class="row">
             <div class="large-12 columns">
                 <label>Username
