--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -1,16 +1,32 @@
 {{##def.page_title = 'Forgot Password' #}}
 
 {{##def.content:
+<script src='https://www.google.com/recaptcha/api.js'></script>
+<script>
+	var submitEnabled = false;
+	function enableSubmit() {
+		submitEnabled = true;
+		var s = document.getElementById('forgotSubmit');
+		s.style.display = 'block';
+	}
+</script>
 <div class="">
-    <form action="/sent-recover" method="post">
+    <form action="/sent-recover" method="post" onsubmit="return submitEnabled;">
         <div class="row">
             <div class="large-6 large-offset-2 columns">
                 <label>Enter your username
                     <input type="text" name="username" required/>
-                    <input class="border-button right green" type="submit" value="recover it"/>
                 </label>
             </div>
         </div>
+	    <div class="row">
+		    <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}" data-callback="enableSubmit"></div>
+	    </div>
+	    <div class="row">
+		    <div class="large-12 columns">
+			    <input  id="forgotSubmit" style="display: none" class="border-button right blue" type="submit" value="Submit"/>
+		    </div>
+	    </div>
     </form>
 </div>
 #}}
