--- a/views/request.html
+++ b/views/request.html
@@ -2,6 +2,12 @@
 
 {{##def.content:
 <script src='https://www.google.com/recaptcha/api.js'></script>
+<script>
+	function sub() {
+		document.getElementById('faucetForm').submit();
+	}
+
+</script>
 <div class="content row panel radius">
 
     <div class="settings">
@@ -31,9 +37,8 @@
             <h5>Request Free Bits</h5>
                 {{?typeof it.user.eligible !== 'number'}}
                     <p class="small ">**Every hour you are able to request 2 free bits, just claim them!</p>
-                    <form class="giveaway-form" action="/request" method="post">
-                        <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}"></div>
-                        <input class="right border-button red" type="submit" value="request"/>
+                    <form class="giveaway-form" action="/request" method="post" id="faucetForm">
+                        <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}" data-callback="sub"></div>
                     </form>
                 {{??}}
                     <h4>You will be eligible for a free 2 bits in {{=it.user.eligible}} minutes</h4>
