Add is_bot flag to the chat API, grety out and ignore bots on client

--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -206,6 +206,20 @@ body {
     color: white;
 }
 
+/* ==========================================================================
+   chatSettings.css
+   ========================================================================== */
+
+#chat-settings-container .option-row:nth-of-type(even) {
+    background-color: #202328;
+}
+
+#chat-settings-container select {
+    background-color: #292d35;
+    border-color: #292d35;
+    color: white;
+}
+
 
 /* ==========================================================================
    strategy.css
