--- a/client_new/css/game.css
+++ b/client_new/css/game.css
@@ -15,6 +15,7 @@
 @import url("textDisplay.css");
 @import url("displaySettings.css");
 @import url("hotkeysSettings.css");
+@import url("chatSettings.css");
 @import url("loading.css");
 
 /**
