--- a/client_new/css/chat.css
+++ b/client_new/css/chat.css
@@ -32,8 +32,15 @@
     bottom: 1.8rem;
 }
 
+.chat-input-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .chat-input {
-    width: 100%;
+    width: calc(100% - 55px);
     border: 4px solid #ADADAD;
     background: rgba(255,255,255,0.7);
     margin: 0;
@@ -60,6 +67,71 @@
     color: black;
     font-size: 13px;
     font-weight: 600;
+}
+
+/* Channel selector */
+#chat-channel-selector {
+    width: 55px;
+    float: right;
+    cursor: pointer;
+}
+
+#chat-channel-selector > img {
+    width: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+}
+
+#chat-channel-selector > i {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+}
+
+#chat-channel-selector .flags-container {
+     position: absolute;
+     bottom: 2rem;
+     right: 1rem;
+ }
+
+/* Animations for the flags container */
+
+.flags-enter {
+    opacity: 0.01;
+}
+
+.flags-enter.flags-enter-active {
+    opacity: 1;
+    transition: opacity .5s ease;
+}
+
+.flags-leave {
+    opacity: 1;
+}
+
+.flags-leave.flags-leave-active {
+    opacity: 0.01;
+    transition: opacity .5s ease-in;
+}
+
+#chat-channel-selector .flags-container .flags-row {
+
+}
+
+#chat-channel-selector .flags-container .flags-flag {
+    width: 30px;
+    margin-right: 3px;
+}
+
+#chat-channel-selector .flags-popover {
+    position: fixed;
+    background-color: #FAFAA7;
+    color: black;
+    font-family: monospace;
+    line-height: 1rem;
+    font-size: 0.8rem;
+    padding: 0 0.2rem;
 }
 
 /* Links within the message */
