--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -252,6 +252,10 @@ body {
     color: white;
 }
 
+#strategy-container .strategy-input:disabled {
+    color: grey;
+}
+
 
 /* ==========================================================================
    players.css
