[DB changes] Expire recovery id sessions, add ip to recovery id and recover password by email instead of username, DB changes: index on users.emain, (ip, expired, used) on recovery

--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -14,8 +14,8 @@
     <form action="/sent-recover" method="post" onsubmit="return submitEnabled;">
         <div class="row">
             <div class="large-6 large-offset-2 columns">
-                <label>Enter your username
-                    <input type="text" name="username" required/>
+                <label>Enter your email
+                    <input type="email" name="email" required/>
                 </label>
             </div>
         </div>
