[DB changes] Add remember me option and expire all user sessions when login out, add index on table sessions for fast session expiration

--- a/views/login.html
+++ b/views/login.html
@@ -28,6 +28,14 @@
                 </label>
             </div>
          </div>
+        <div class="row">
+            <div class="large-12 columns">
+                <label>
+                    Remember me
+                    <input type="checkbox" name="remember">
+                </label>
+            </div>
+        </div>
          <div class="row">
             <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}" data-callback="enableSubmit"></div>
          </div>
