--- a/views/template/header_old.html
+++ b/views/template/header_old.html
@@ -4,6 +4,7 @@
         <div class="title">
             <a href="/">
                 <h1 class="hide-for-small-only">bustabit</h1>
+                <h1 class="show-for-small-only">BaB</h1>
             </a>
         </div>
 
