--- a/views/account.html
+++ b/views/account.html
@@ -43,7 +43,8 @@
             <hr>
             <p class="account">
                 <b>Deposit Address:</b>
-                <a href="bitcoin:{{=it.user.deposit_address}}?message=deposit">{{=it.user.deposit_address}}</a>
+                <input type="text" value="{{=it.user.deposit_address}}" readonly>
+                <a href="bitcoin:{{=it.user.deposit_address}}?message=deposit">Bitcoin link</a>
             </p>
             <div class="row">
                 <div class="large-5 columns">
